add comment to index.html and style.css

--- a/01-Natours/css/style.css
+++ b/01-Natours/css/style.css
@@ -22,6 +22,10 @@ body {
   padding: 30px;
 }
 
+/***************************************/
+/** HEADER */
+/***************************************/
+
 .header {
   height: 95vh;
   background-image: linear-gradient(
