--- a/01-Natours/css/style.css
+++ b/01-Natours/css/style.css
@@ -135,6 +135,10 @@ body {
   }
 }
 
+/***************************************/
+/** GENERAL REUSABLE COMPONENTS */
+/***************************************/
+
 .btn:link,
 .btn:visited {
   text-transform: uppercase;
