--- a/01-Natours/sass/base/_utilities.scss
+++ b/01-Natours/sass/base/_utilities.scss
@@ -13,3 +13,10 @@
 .u-margin-bottom-big {
   margin-bottom: 8rem;
 }
+
+.u-margin-top-big {
+  margin-top: 8rem;
+}
+.u-margin-top-hige {
+  margin-top: 10rem;
+}
