--- a/01-Natours/sass/base/_base.scss
+++ b/01-Natours/sass/base/_base.scss
@@ -7,8 +7,37 @@
 }
 
 html {
-  // This defines what 1rem is
+  // ? This defines what 1rem is
+  // ? 1rem = 10px
+  // ? 10px / 16px = 62.5%
   font-size: 62.5%;
+
+  // * > 1800px
+  @include respond(big-desktop) {
+    // ? 1rem = 12px
+    // ? 12px / 16px = 75%
+    font-size: 75%;
+  }
+
+  // * < 1200px
+  @include respond(tab-land) {
+    // ? 1rem = 9px
+    // ? 9px / 16px = 56.25%
+    font-size: 56.25%;
+  }
+
+  // * < 900px
+  @include respond(tab-port) {
+    // ? 1rem = 8px
+    // ? 8px / 16px = 50%
+    font-size: 50%;
+  }
+
+  // * < 600px
+  // ! It's the same as tab-port
+  // @include respond(phone) {
+  //   font-size: 50%;
+  // }
 }
 
 body {
