--- a/01-Natours/sass/abstracts/_mixins.scss
+++ b/01-Natours/sass/abstracts/_mixins.scss
@@ -12,3 +12,48 @@
   left: 50%;
   transform: translate(-50%, -50%);
 }
+
+/*
+  * MEDIA QUERY MANAGER
+
+  ?  0 - 600px        : Phone
+  ?  600px - 900px    : Tablet Potrait
+  ?  900px - 1200px   : Tablet Landscape
+  ?  1200px - 1800px  : Desktop (Normal)
+  ?  1800px ~         : Big Desktop
+
+  * Break Point Argument Choices:
+
+  ? ~ phone
+  ? ~ tab-port
+  ? ~ tab-land
+  ? ~ big-desktop
+
+  ! em = 16px
+*/
+@mixin respond($breakpoint) {
+  @if $breakpoint == phone {
+    // * 600px
+    @media (max-width: 37.5em) {
+      @content;
+    }
+  }
+  @if $breakpoint == tab-port {
+    // * 900px
+    @media (max-width: 56.25em) {
+      @content;
+    }
+  }
+  @if $breakpoint == tab-land {
+    // * 1200px
+    @media (max-width: 75em) {
+      @content;
+    }
+  }
+  @if $breakpoint == big-desktop {
+    // * 1800px
+    @media (min-width: 112.5em) {
+      @content;
+    }
+  }
+}
