#57 Writing Media Queries - Base, Typography and Layout

--- a/01-Natours/sass/abstracts/_mixins.scss
+++ b/01-Natours/sass/abstracts/_mixins.scss
@@ -30,6 +30,7 @@
   ? ~ big-desktop
 
   ! em = 16px
+  ! ORDER: Base + typography > general layout + grid > page layout > components
 */
 @mixin respond($breakpoint) {
   @if $breakpoint == phone {
