--- a/01-Natours/sass/base/_base.scss
+++ b/01-Natours/sass/base/_base.scss
@@ -12,13 +12,6 @@ html {
   // ? 10px / 16px = 62.5%
   font-size: 62.5%;
 
-  // * > 1800px
-  @include respond(big-desktop) {
-    // ? 1rem = 12px
-    // ? 12px / 16px = 75%
-    font-size: 75%;
-  }
-
   // * < 1200px
   @include respond(tab-land) {
     // ? 1rem = 9px
@@ -34,12 +27,24 @@ html {
   }
 
   // * < 600px
-  // ! It's the same as tab-port
+  // ! It's the same as the tab-port
   // @include respond(phone) {
   //   font-size: 50%;
   // }
+
+  // * > 1800px
+  @include respond(big-desktop) {
+    // ? 1rem = 12px
+    // ? 12px / 16px = 75%
+    font-size: 75%;
+  }
 }
 
 body {
   box-sizing: border-box;
+  padding: 3rem;
+
+  @include respond(tab-port) {
+    padding: 0;
+  }
 }
