--- a/01-Natours/sass/components/_popup.scss
+++ b/01-Natours/sass/components/_popup.scss
@@ -27,6 +27,12 @@
   &__left {
     width: 33.333333%;
     display: table-cell;
+
+    @include respond(tab-port) {
+      width: 50%;
+      display: table-row;
+      margin: 0 auto;
+    }
   }
 
   &__right {
@@ -34,11 +40,15 @@
     display: table-cell;
     vertical-align: middle;
     padding: 3rem 5rem;
+
+    @include respond(tab-port) {
+      width: 100%;
+    }
   }
 
   &__img {
-    display: block;
-    width: 100%;
+    display: inline-block;
+    width: 50%;
   }
 
   &__text {
