--- a/03-Nexter/sass/_base.scss
+++ b/03-Nexter/sass/_base.scss
@@ -1,4 +1,4 @@
-// COLOR VARIABLES
+// ? COLOR VARIABLES
 $color-primary: #c69963;
 $color-primary-dark: #b28451;
 
@@ -10,7 +10,7 @@ $color-grey-light-2: #aaa;
 $color-grey-dark-1: #54483a;
 $color-grey-dark-2: #6d5d4b;
 
-// FONT VARIABLES
+// ? FONT VARIABLES
 $font-primary: 'Nunito', sans-serif;
 $font-display: 'Josefin Sans', sans-serif;
 
@@ -43,9 +43,4 @@ body {
       [col-start] minmax(min-content, 14rem) [col-end]
     )
     [center-end] minmax(6rem, 1fr) [full-end];
-
-  & > * {
-    padding: 40px;
-    font-size: 3rem;
-  }
 }
